==> OS-Q/A52B/cores/esp32/uart/uart_drv.cpp <==
#include "mbc_config.h"
#include "freertos/FreeRTOS.h"
#include "freertos/queue.h"
#include "driver/periph_ctrl.h"
#include "driver/uart.h"
#include "Arduino.h"

void UartDrv::begin(){
	pinMode(SS, INPUT_PULLUP);
	pinMode(PIN_SPI_SR, OUTPUT);
	pinMode(PIN_SPI_HANDSHAKE, OUTPUT);
	// set sr HIGH for syncronization purpose
	GPIO.out_w1ts = ((uint32_t)1 << 22); // digitalWrite(PIN_SPI_SR, HIGH);
	periph_module_disable( PERIPH_UART0_MODULE );
	delay( 20 );
	periph_module_enable( PERIPH_UART0_MODULE );
	/* Configure parameters of an UART driver,
	* communication pins and install the driver */
	uart_config_t uart_config = {
		.baud_rate = UART_BAUDRATE,
		.data_bits = UART_DATA_8_BITS,
		.parity = UART_PARITY_DISABLE,
		.stop_bits = UART_STOP_BITS_1,
		.flow_ctrl = UART_HW_FLOWCTRL_DISABLE
	};
	uart_param_config(UART_NUM_0, &uart_config);

	//Set UART pins (using UART0 default pins ie no changes.)
	uart_set_pin(UART_NUM_0, g_APinDescription[TX].ulPin, g_APinDescription[RX].ulPin, -1, -1);
	//Install UART driver, and get the queue.
	uart_driver_install(UART_NUM_0, BUFFER_SIZE * 2, 0, 20, &uart0_queue, 0);

	// disable log to avoid spurious messages interfering with communication
	esp_log_level_set("*", ESP_LOG_NONE);
	// restore to default state
	GPIO.out_w1tc = ((uint32_t)1 << 22); // digitalWrite(PIN_SPI_SR, LOW);
}

void UartDrv::end(){
	// reset Serial module
	periph_module_disable( PERIPH_UART0_MODULE );
	delay( 20 );
	periph_module_enable( PERIPH_UART0_MODULE );
	// restore lot to ERROR level
	esp_log_level_set("*", ESP_LOG_ERROR);
}

void UartDrv::sendParam(uint8_t *param, uint8_t param_len, uint8_t lastParam){
	// NOTE for each append be sure to not insert more than buffer size byte in buffer or append function
	// won't let me do that.
	if (_txIndex + param_len + 1 < MAX_CMD_LEN) {
		// append the typ. parameter size (1 byte)
		_repPkt[_txIndex++] = param_len;

		// append all the parameters from the list to the buffer
		memcpy(&_repPkt[_txIndex], param, param_len);
		_txIndex += param_len;
	}

	// if this is the last parameter
	if (lastParam == 1) {
		_txBufFinalizePacket();
	}
}

void UartDrv::sendParam(uint16_t param, uint8_t lastParam){
	// NOTE for each append be sure to not insert more than buffer size bytes in buffer or append function
	// won't let me do that.
	if (_txIndex + 3 < MAX_CMD_LEN) {
		// since each parameter is two bytes wide, add 2 as the parameter size
		_repPkt[_txIndex++] = 2;
		// then add the parameter (big-endian mode)
		_repPkt[_txIndex++] = (uint8_t)((param & 0xff00) >> 8);
		_repPkt[_txIndex++] = (uint8_t)(param & 0xff);
	}

	// if this is the last parameter
	if (lastParam == 1) {
		_txBufFinalizePacket();
	}
}

void UartDrv::_writeBuffPkt(const uint8_t *data, uint32_t len, uint8_t offset){	
	len -= offset; // remove size of the bytes already in the buffer;

	// if len is greater than _interface.repPkt size, split message in different writes
	uint16_t availDataSpace = MAX_CMD_LEN - (offset + 1); // don't consider header (offset) and footer for the first write
	uint32_t byteWritten = 0;
	while(len > availDataSpace){
		// be sure to send a BUFFER_SIZE multiple in order to avoid 0 padding for this communication
		// in this way control chip will not notice difference between sending the whole message and split message in multiple writes
		uint16_t writeLen = ((uint16_t)(availDataSpace + 1) / BUFFER_SIZE) * BUFFER_SIZE;
		memcpy((_repPkt + _txIndex), (data + byteWritten), writeLen - offset); // remove the already used space for header
		write(_repPkt, writeLen);
		byteWritten += writeLen;
		len -= writeLen;
		_txIndex = 0;
		availDataSpace = MAX_CMD_LEN - 1; // take into account space for end command
		offset = 0; // don't consider offset for next iterations	
	}
	
	// at this point _interface.repPkt has enough space to store the whole message (or the remaining part)
	memcpy((_repPkt + _txIndex), (data + byteWritten), len);
	_txIndex += len;
	_repPkt[_txIndex - 1] = END_CMD;

	write(_repPkt, _txIndex);
}
